--- a/src/EFCore.Insight/EFCore.Insight.csproj
+++ b/src/EFCore.Insight/EFCore.Insight.csproj
@@ -13,6 +13,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
+    <!-- Database providers for query plan analysis (optional, loaded dynamically) -->
+    <PackageReference Include="Microsoft.Data.Sqlite" />
+    <PackageReference Include="Microsoft.Data.SqlClient" />
+    <PackageReference Include="Npgsql" />
   </ItemGroup>
 
   <ItemGroup>
